<resources>
    <string name="app_name">SleeperStudent</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="profile">Profile</string>
    <string name="sleep_times">Sleep Times</string>

    <string name="hello_first_fragment">Welcome to Sleeper Student</string>

    <!-- Strings used in physical info fragment -->
    <string name="hello_second_fragment">Personal Information</string>
    <string name="birth_date">Age</string>
    <string name="height">Height (Inches)</string>
    <string name="weight">Weight (Pounds)</string>
    <string name="saved">Save Changes</string>
    <string name="cancel">Back</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>